--- a/projects/demo/src/index.html
+++ b/projects/demo/src/index.html
@@ -1,7 +1,10 @@
 <html>
     <head>
         <title>Event Filters Demo</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1"
+        />
     </head>
     <body>
         <my-app>loading</my-app>
